...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quizzes">


    <Button
        android:id="@+id/quizzesBackButton"
        android:layout_width="383dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/modes_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quizzesRecyclerView"
        android:layout_width="381dp"
        android:layout_height="647dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzesBackButton"
...
